assets/css/style.css
/* TEXT */

body {
    text-align: center;
    background-color: black;
    color: lightgray;
    font-size: small;
}

h1,
h2 {
    text-transform: uppercase;
    padding: 0;
    margin: 0;
}

h1 {
    font-size: x-large;
}

h2 {
    font-size: medium;
    padding: 15px 0px;
}

strong {
    color: burlywood;
}

hr {
    background-color: burlywood;
    margin: 0;
    width: 100%;
}

.full-width {
    width: 100vw;
    position: relative;
    left: 0;
}

/* MAIN CONTAINER */

.container-fluid {
    min-height: 95vh;
    width: 100vw;
}

html body div section div div.col

/* HEADER */

.header {

}

.navbar {
    padding: 40px 20px;
}

.header-img {
    background: url("../images/dragon-small.jpg");
    background-position: right right;
    background-repeat: no-repeat;
    background-size: auto 100%;
    padding: 0;
    margin: 0;

}

.fa-bars {
    font-size: 6vh;
    color: burlywood;
}
.header-img--left {
    left: 0;
    transform: scaleX(-1);
}

.button-nav {
padding
}

/* TITLE & INTRO */

.page-intro {
    margin-top: 15px;
}

.page-title {
    border-width: 1px 0px;
    border-color: burlywood;
    border-style: solid;
    padding: 15px 0px;

    /* background: url("../images/dragon-largebg-3.jpg");
    background-position: bottom right;
    background-repeat: no-repeat;
    background-size: auto 100%; */

}

/* INFO PAGE */

.accordion {
    width: 90vw;
    margin: 20px auto;
    border: 1.5px solid burlywood;
    border-radius: 2px;
}

.info-article {
    border: none;
}

.card-header {
    background-color: black;
    padding: 0;
    border: none;
    margin: 0;
    border-radius: 0;
}

.card-body {
    background-color: black;
    color: lightgray;
    text-align: justify;
    padding: 12px;
    font-size: small;
    border: 0px;
    border-radius: 0px;
}

.card-body p {
    /* margin: 15px 0px 0px 0px; */
}

.btn-info {
    text-transform: uppercase;
    width: 100%;
    background-color: black;
    border: 0;
}

.btn-dark {
    text-transform: uppercase;
    width: 100%;
    background-color: black;
    color: lightgray;
    padding: 5px 0px;
    border: 0;
}

.btn-dark h2 {
    margin: 0;
}

.btn-dark:hover {
    background-color: black;
}

.btn-info:hover {
    /* background-color: lightgray;
    color: black; */
}


/* GUIDE PAGE */

.guide-article {
    /* border: 1.5px solid burlywood; */
    width: 90vw;
    margin-bottom: 10px;
}

.guide-article p {
    font-size: small;
    text-align: justify;
    margin-top: 12px;
}

.guide-article img {
    border: 1.5px solid burlywood;
}

.guide-img {
    height: 20vh;
    width: 40vw;
    margin-bottom: 6px;
    border: 2px solid burlywood;
}

.btn-guide {
    margin: 10px auto 20px auto;
    font-size: small;
}

.guide-dropdown {
    margin: 20px auto 30px auto;
    width:100%;
}

.dropdown-menu {
    width: 250px;
    margin-left: -85px;
    text-align: center;
    background-color: black;
    border: 2px solid burlywood;
    padding: 0;
}

.dropdown-item {
    color: lightgray;
    padding: 7 auto;
}

#firstDropdownItem {
    border-top: 0;
}

#firstArticle {
    background: url("../images/dragon-small.jpg");
    background-position: bottom middle;
    background-repeat: no-repeat;
    background-size: cover;
}

/* FOOTER */

footer {
    background-color: black;
    /* margin-top: 150px; */
    /* border-top: 1px solid burlywood; */
}

.btn-footer {
    color: lightgray;
    font-weight: lighter;
    font-size: small;
    box-shadow: none;
    padding:12px 0px;
}

.btn-footer:active,
.btn-footer:hover {
    color: burlywood;
    box-shadow: none;
}

.btn-footer:focus {
    box-shadow: none;
}

.btn-footer:visited {
    color: lightgray;
    box-shadow: none;
}

.modal-dialog {
    position: absolute;
    bottom: 10vh;
    width: 80%;
    margin: 0 10%;

}

.modal-body {}

.modal-content {
    border: 1px solid burlywood;
    border-radius: 3px;
    font-size: small;
    background-color: black;
    color: lightgray;
}

.modal--footer {}

@media only screen and (max-width: 572px) {
    /* .header-img {background-position: left left;}
    .container-fluid {width: 80vw;} */
}

